// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All service summary for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": null,
    },
  },
}
`;

exports[`services data All service summary for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": null,
    },
  },
}
`;

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": null,
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": null,
    },
  },
}
`;

exports[`services data Searching services by name 1`] = `
Array [
  Object {
    "data": Object {
      "en_root": Object {
        "search_by_english_word": Array [
          Object {
            "id": "47",
            "name": "Classified Infrastructure",
          },
        ],
        "search_by_french_word": Array [],
      },
    },
  },
  Object {
    "data": Object {
      "fr_root": Object {
        "diacritical_free_search": Array [
          Object {
            "id": "47",
            "name": "Infrastructure classifiée",
          },
        ],
        "diacritical_search": Array [
          Object {
            "id": "47",
            "name": "Infrastructure classifiée",
          },
        ],
        "multi_word_search": Array [
          Object {
            "id": "47",
            "name": "Infrastructure classifiée",
          },
        ],
        "partial_word_search": Array [
          Object {
            "id": "47",
            "name": "Infrastructure classifiée",
          },
        ],
      },
    },
  },
]
`;

exports[`services data Single service 1`] = `
Object {
  "data": Object {
    "root": Object {
      "service": Object {
        "accessibility_assessors": Array [],
        "account_reg_digital_status": true,
        "application_digital_status": false,
        "authentication_status": true,
        "collects_fees": null,
        "decision_digital_status": false,
        "description": "The Government of Canada Secret Infrastructure Network and Hosting service provides an enterprise-wide GC infrastructure to “electronically use” (process, store and transmit) information up to the security classification level of SECRET",
        "designations": Array [],
        "digital_enablement_comment": null,
        "digital_identity_platforms": Array [],
        "feedback_channels": Array [],
        "first_active_year": null,
        "id": "47",
        "is_active": true,
        "issuance_digital_status": false,
        "issue_res_digital_status": false,
        "last_accessibility_review": "2021",
        "last_active_year": null,
        "last_gender_analysis": "",
        "last_improve_from_feedback": "",
        "name": "Classified Infrastructure",
        "org": null,
        "org_id": "305",
        "program_activity_codes": Array [],
        "programs": Array [],
        "recipient_type": Array [],
        "report_years": Array [
          "2023",
        ],
        "scope": Array [],
        "service_report": Array [
          Object {
            "cra_business_ids_collected": null,
            "email_application_count": 0,
            "fax_application_count": 0,
            "live_application_count": 0,
            "mail_application_count": 0,
            "online_application_count": 12,
            "online_inquiry_count": 624,
            "other_application_count": null,
            "phone_application_count": 0,
            "phone_inquiry_and_application_count": 0,
            "phone_inquiry_count": null,
            "service_id": "47",
            "service_report_comment": null,
            "sin_collected": null,
            "year": "2023",
          },
        ],
        "service_type": Array [
          "Information",
        ],
        "standards": Array [
          Object {
            "channel": "Online",
            "first_active_year": null,
            "last_active_year": null,
            "last_gcss_tool_year": null,
            "name": "Request fulfillment duration: implementation service delivery interval: up to 210 business days",
            "other_type_comment": null,
            "rtp_urls": Array [],
            "service_id": "47",
            "standard_id": "86",
            "standard_report": Array [
              Object {
                "count": 10,
                "is_target_met": null,
                "lower": 0.9,
                "met_count": null,
                "standard_id": "86",
                "standard_report_comment": "Business Volume That Met Service Standard Target: Data collection and measurement is not possible at this time as the ITSM tool has not been configured to collect this information.",
                "upper": null,
                "year": "2023",
              },
            ],
            "standard_urls": Array [
              "https://service.ssc-spc.gc.ca/en/service/government-canada-secret-infrastructure-network-and-hosting#standards-01",
            ],
            "submission_year": "2023",
            "target_type": null,
            "type": "Timeliness",
          },
        ],
        "subject_type": "service",
        "submission_year": "2023",
        "target_groups": Array [],
        "urls": Array [
          "https://service.ssc-spc.gc.ca/en/service/government-canada-secret-infrastructure-network-and-hosting",
        ],
      },
    },
  },
}
`;
